logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -5,7 +5,7 @@
   --color-popover-button: #F2FBFF;
 
   /* Borders */
-  --border-header-bottom: 1px solid lightgray;
+  --border-header-bottom: 2px solid white;
   --border-footer-top: 1px solid lightgray;
   --border-side: 1px solid white;
   --border-top-accent: 2px solid #E66414;
